<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_EnOcean" Id="{bec68ff9-8f1d-4ce1-b8b9-84de691aacc9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
//Atrium
	strEnOceanSwitch_AtriumNiveau_PladeB				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_AtriumNiveau_Service				: Tc2_EnOcean.STR_EnOceanSwitch;


//Gange
	strEnOceanSwitch_Gang_3_364				: Tc2_EnOcean.STR_EnOceanSwitch;

	//Rum
	strEnOceanSwitch_Rum_2_351				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_2_352				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_2_353				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_2_354				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_2_355				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_2_356				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_2_357				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_3_361_1			: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_3_361_2			: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_3_365				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_3_366				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_3_367				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_3_368				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_3_369				: Tc2_EnOcean.STR_EnOceanSwitch;
	strEnOceanSwitch_Rum_3_370				: Tc2_EnOcean.STR_EnOceanSwitch;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>